Added Background in old version